--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "spawn mocha",
     "build": "babel src -d dist",
     "couchbase:start": "docker start db",
-    "couchbase:stop": "docker stop db"
+    "couchbase:stop": "docker stop db",
+    "nightwatch": "BABEL_ENV=nightwatch spawn nightwatch"
   },
   "repository": {
     "type": "git",
@@ -26,34 +27,37 @@
   },
   "homepage": "https://github.com/philgs/glados-e2e#readme",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "body-parser": "^1.17.1",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.3",
-    "debug": "^3.1.0",
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "morgan": "^1.9.0",
-    "ms": "^2.1.1",
     "@philgs/spawn": "^1.0.0",
     "@types/chai": "^4.0.1",
     "@types/mocha": "^2.2.41",
     "babel-cli": "^6.24.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-exponentiation-operator": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
+    "body-parser": "^1.17.1",
     "chai": "^4.1.0",
     "chai-as-promised": "^7.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
     "dirty-chai": "^2.0.1",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
+    "morgan": "^1.9.0",
+    "ms": "^2.1.1",
+    "nightwatch": "^0.9.19",
     "nodemon": "^1.11.0",
+    "selenium-standalone": "^6.12.0",
     "sinon": "^4.1.2",
     "sinon-chai": "^2.11.0",
-    "supertest": "^3.0.0",
     "types-dirty-chai": "git+https://github.com/philgs/types-dirty-chai.git#development"
   }
 }
