--- a/config/config-template.json
+++ b/config/config-template.json
@@ -4,10 +4,13 @@
         "AUTH0_CLIENT_ID": "Auth0 client ID for this app, from the Auth0 dashboard",
         "AUTH0_CLIENT_SECRET": "Auth0 client secret for this app, from the Auth0 dashboard",
         "AUTH0_DOMAIN": "Auth0 domain for this app, from the Auth0 dashboard",
+        "AUTH0_EMAIL": "Email address for logging in via Auth0",
+        "AUTH0_PASSWORD": "Password for logging in via Auth0",
         "DEBUG": "Value for the `DEBUG` environment variable; see https://www.npmjs.com/package/debug",
         "NODE_ENV": "development",
         "NIGHTWATCH_HOME": "Root URL for Nightwatch tests",
         "PROTOTYPE_PORT": 8080,
+        "SCREENSHOT_DIR": "Directory to store Nightwatch screenshots",
         "SESSION_SECRET": "Absolute path to the .key file for signing session cookies",
         "SSL_CERT": "Absolute path to the server.crt file"
     },
