--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glados-e2e",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "End-to-end testing suite for the Glados library",
   "main": "index.js",
   "scripts": {
@@ -34,10 +34,20 @@
       },
       "nightwatch": {
         "presets": [
-          "es2015"
+          [
+            "env",
+            {
+              "targets": {
+                "node": "current"
+              }
+            }
+          ],
+          "flow",
+          "stage-3"
         ],
         "plugins": [
-          "add-module-exports"
+          "add-module-exports",
+          "transform-class-properties"
         ]
       }
     }
@@ -62,6 +72,7 @@
     "@types/chai": "^4.0.1",
     "@types/mocha": "^2.2.41",
     "babel-cli": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
